--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,8 +7,8 @@
   <meta name="description" content="multikart">
   <meta name="keywords" content="multikart">
   <meta name="author" content="multikart">
-  <link rel="icon" href="/assets/images/favicon/1.png" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/images/favicon/1.png" type="image/x-icon">
+  <link rel="icon" href="/assets/images/logos/stylio.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/logos/stylio.png" type="image/x-icon">
   <title>Stylio -  E-commerce </title>
 
   <!--Google font-->
@@ -252,8 +252,8 @@
               <li class="onhover-dropdown mobile-account"> <i class="fa fa-user" aria-hidden="true"></i>
                 My Account
                 <ul class="onhover-show-div">
-                  <li><a href="login.html">Login</a></li>
-                  <li><a href="register.html">register</a></li>
+                  <li><a href="/auth/login">Login</a></li>
+                  <li><a href="/auth/signup">register</a></li>
                 </ul>
               </li>
             </ul>
@@ -274,7 +274,7 @@
                 </a>
               </div>
               <div class="brand-logo">
-                <a href="index.html"><img src="assets/images/icon/logo/1.png" class="img-fluid blur-up lazyload"
+                <a href="index.html"><img src="/assets/images/logos/stylio.png" class="img-fluid blur-up lazyload"
                     alt=""></a>
               </div>
             </div>
@@ -296,7 +296,7 @@
                 <div class="icon-nav">
                   <ul>
                     <li class="onhover-div mobile-search d-xl-none d-inline-block">
-                      <div><img src="assets/images/icon/search.png" onclick="openSearch()"
+                      <div><img src="/assets/images/icon/search.png" onclick="openSearch()"
                           class="img-fluid blur-up lazyload" alt=""> <i class="ti-search" onclick="openSearch()"></i>
                       </div>
                       <div id="search-overlay" class="search-overlay">
@@ -320,7 +320,7 @@
                       </div>
                     </li>
                     <li class="onhover-div mobile-setting">
-                      <div><img src="assets/images/icon/setting.png" class="img-fluid blur-up lazyload" alt=""> <i
+                      <div><img src="/assets/images/icon/setting.png" class="img-fluid blur-up lazyload" alt=""> <i
                           class="ti-settings"></i></div>
 
 
@@ -340,13 +340,13 @@
                       </div>
                     </li>
                     <li class="onhover-div mobile-cart">
-                      <div><img src="assets/images/icon/cart.png" class="img-fluid blur-up lazyload" alt=""> <i
+                      <div><img src="/assets/images/icon/cart.png" class="img-fluid blur-up lazyload" alt=""> <i
                           class="ti-shopping-cart"></i></div>
                       <span class="cart_qty_cls">2</span>
                       <ul class="show-div shopping-cart">
                         <li>
                           <div class="media">
-                            <a href="#"><img alt="" class="me-3" src="assets/images/fashion/product/1.jpg"></a>
+                            <a href="#"><img alt="" class="me-3" src="/assets/images/fashion/product/1.jpg"></a>
                             <div class="media-body">
                               <a href="#">
                                 <h4>item name</h4>
@@ -358,7 +358,7 @@
                         </li>
                         <li>
                           <div class="media">
-                            <a href="#"><img alt="" class="me-3" src="assets/images/fashion/product/2.jpg"></a>
+                            <a href="#"><img alt="" class="me-3" src="/assets/images/fashion/product/2.jpg"></a>
                             <div class="media-body">
                               <a href="#">
                                 <h4>item name</h4>
@@ -1839,7 +1839,7 @@
               <h4>about</h4>
             </div>
             <div class="footer-contant">
-              <div class="footer-logo"><img src="assets/images/icon/logo/1.png" alt=""></div>
+              <div class="footer-logo"><img src="/assets/images/icon/logo/1.png" alt=""></div>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
               <div class="footer-social">
@@ -1917,19 +1917,19 @@
             <div class="payment-card-bottom">
               <ul>
                 <li>
-                  <a href="#"><img src="assets/images/icon/visa.png" alt=""></a>
+                  <a href="#"><img src="/assets/images/icon/visa.png" alt=""></a>
                 </li>
                 <li>
-                  <a href="#"><img src="assets/images/icon/mastercard.png" alt=""></a>
+                  <a href="#"><img src="/assets/images/icon/mastercard.png" alt=""></a>
                 </li>
                 <li>
-                  <a href="#"><img src="assets/images/icon/paypal.png" alt=""></a>
+                  <a href="#"><img src="/assets/images/icon/paypal.png" alt=""></a>
                 </li>
                 <li>
-                  <a href="#"><img src="assets/images/icon/american-express.png" alt=""></a>
+                  <a href="#"><img src="/assets/images/icon/american-express.png" alt=""></a>
                 </li>
                 <li>
-                  <a href="#"><img src="assets/images/icon/discover.png" alt=""></a>
+                  <a href="#"><img src="/assets/images/icon/discover.png" alt=""></a>
                 </li>
               </ul>
             </div>
@@ -2660,7 +2660,7 @@
                   </button>
                   <div class="media">
                     <a href="#">
-                      <img class="img-fluid blur-up lazyload pro-img" src="assets/images/fashion/product/43.jpg" alt="">
+                      <img class="img-fluid blur-up lazyload pro-img" src="/assets/images/fashion/product/43.jpg" alt="">
                     </a>
                     <div class="media-body align-self-center text-center">
                       <a href="#">
@@ -2677,7 +2677,7 @@
                       </div>
 
                       <div class="upsell_payment">
-                        <img src="assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
+                        <img src="/assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
                       </div>
                     </div>
                   </div>
@@ -2690,7 +2690,7 @@
                         <div class="img-wrapper">
                           <div class="front">
                             <a href="#">
-                              <img src="assets/images/fashion/product/1.jpg" class="img-fluid blur-up lazyload mb-1"
+                              <img src="/assets/images/fashion/product/1.jpg" class="img-fluid blur-up lazyload mb-1"
                                 alt="cotton top">
                             </a>
                           </div>
@@ -2704,7 +2704,7 @@
                         <div class="img-wrapper">
                           <div class="front">
                             <a href="#">
-                              <img src="assets/images/fashion/product/34.jpg" class="img-fluid blur-up lazyload mb-1"
+                              <img src="/assets/images/fashion/product/34.jpg" class="img-fluid blur-up lazyload mb-1"
                                 alt="cotton top">
                             </a>
                           </div>
@@ -2718,7 +2718,7 @@
                         <div class="img-wrapper">
                           <div class="front">
                             <a href="#">
-                              <img src="assets/images/fashion/product/13.jpg" class="img-fluid blur-up lazyload mb-1"
+                              <img src="/assets/images/fashion/product/13.jpg" class="img-fluid blur-up lazyload mb-1"
                                 alt="cotton top">
                             </a>
                           </div>
@@ -2732,7 +2732,7 @@
                         <div class="img-wrapper">
                           <div class="front">
                             <a href="#">
-                              <img src="assets/images/fashion/product/19.jpg" class="img-fluid blur-up lazyload mb-1"
+                              <img src="/assets/images/fashion/product/19.jpg" class="img-fluid blur-up lazyload mb-1"
                                 alt="cotton top">
                             </a>
                           </div>
