--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,24 +1,65 @@
-<div id="login-form">
-  <h2>Log In</h2>
-  <form action="/auth/login" method="POST">
+{{!-- <section class="p-0">
+  <div id="login-form">
+    <h2>Log In</h2>
+    <form action="/auth/login" method="POST">
 
-    <label> Username
-      <input type="text" name="username" placeholder="Your username" />
-    </label>
+      <label> Username
+        <input type="text" name="username" placeholder="Your username" />
+      </label>
 
-    <label> Email
-      <input type="email" name="email" placeholder="Your email" />
-    </label>
+      <label> Email
+        <input type="email" name="email" placeholder="Your email" />
+      </label>
 
-    <label> Password
-      <input type="password" name="password" placeholder="Your password" />
-    </label>
+      <label> Password
+        <input type="password" name="password" placeholder="Your password" />
+      </label>
 
-    <button type="submit">Log In</button>
+      <button type="submit">Log In</button>
 
 
-    {{#if errorMessage}}
+      {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
+      {{/if}}
+    </form>
+  </div>
+</section> --}}
+
+<section class="login-page section-b-space">
+  <form action="/auth/login" method="POST">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h3>Login</h3>
+          <div class="theme-card">
+            <form class="theme-form">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" name="email" class="form-control" id="email" placeholder="Email" required="">
+              </div>
+              <div class="form-group">
+                <label for="review">Password</label>
+                <input type="password" name="password" class="form-control" id="review"
+                  placeholder="Enter your password" required="">
+              </div>
+               <button type="submit" class="btn btn-solid">Log In</button>
+            </form>
+          </div>
+        </div>
+        <div class="col-lg-6 right-login">
+          <h3>New Customer</h3>
+          <div class="theme-card authentication-right">
+            <h6 class="title-font">Create A Account</h6>
+            <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be
+              able to order from our shop. To start shopping click register.</p><a href="#" class="btn btn-solid">Create
+              an Account</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    {{#if errorMessage}}
+    <p class="error">{{errorMessage}}</p>
     {{/if}}
   </form>
-</div>
+</section>
+<!--Section ends-->
