--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,40 +1,52 @@
-<div id="form">
-  <h2>Sign Up</h2>
-  <form action="/auth/register" method="post">
-
-    <label> Username
-      <input type="text" name="username" placeholder="username" required/>
-    </label>
-
-    <label> Email
-      <input type="email" name="email" placeholder="email" />
-    </label>
-
-    <label> Password
-      <input type="password" name="password" placeholder="password" />
-    </label>
-
-     {{!-- <label> Shipping Address
-      <input type="text" name=" shipping_address" placeholder="home address" required/>
-    </label> --}}
-
-     <label  for="mobile_number"> Mobile Number
-      <input type="tel" id="mobile_number" name="mobile_number" placeholder="00 890-183-98" required />
-    </label>
-
-    <label> State
-      <input type="text" name="state" placeholder="Your state" required/>
-    </label>
-
-     <label> Country
-      <input type="text" name="country" placeholder="Your country" required/>
-    </label>
-
-    <button type="submit">Sign Up</button> 
 
 
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
+
+
+    <!--section start-->
+    <section class="register-page section-b-space">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>create account</h3>
+                    <div class="theme-card">
+                        <form class="theme-form" action="/auth/register" method="post">
+                            <div class="form-row row">
+                                <div class="col-md-6">
+                                    <label>First Name</label>
+                                    <input type="text" name="firstName" class="form-control" id="fname" placeholder="First Name"
+                                        required="">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Last Name</label>
+                                    <input type="text" name="lastName" class="form-control" id="lname" placeholder="Last Name"
+                                        required="">
+                                </div>
+                            </div>
+                            <div class="form-row row">
+                                <div class="col-md-6">
+                                    <label >email</label>
+                                    <input type="text" name="email" class="form-control" id="email" placeholder="Email" required >
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="password">Password</label>
+                                    <input type="password" name="password" class="form-control" id="review"
+                                        placeholder="Enter your password" required>
+                                </div>
+                    
+                                <button type="submit"  class="btn btn-solid w-auto">CREATE AN ACCOUNT</button>
+                                 
+                            </div>
+          {{#if errorMessage}}
+      <p class="error">
+        {{errorMessage}}</p>
     {{/if}}
-  </form>
-</div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Section ends-->
+
+
+    
