--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -307,21 +307,13 @@
               <h4>about</h4>
             </div>
             <div class="footer-contant">
-                <div class="brand-logo" style="float:left; margin: 0px;">
+                <div class="brand-logo" style="float:left; margin-right: 0px;">
                 <a href="/"><img src="/assets/images/logos/stylio.png" class="img-fluid blur-up lazyload"
                     alt=""></a>
               </div>
-              <p style="word-break:break-all; padding-bottom: 1rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-              <div class="footer-social">
-                <ul>
-                  <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                </ul>
-              </div>
+              <p>Enjoy rewards and instant benefits by joining our STYLIO Family club for free today.</p>
+              <button class="theme-color-5 " style="margin-left:9rem; margin-top:2.5rem; border:transparent;  height: 3rem; width: 10rem; background-color: #d4b196;"><a style="color: white; font-size: 1rem; font-weight: 400; font-family: Lato,sans-serif;" href="/auth/register">JOIN NOW</a></button>
+              
             </div>
           </div>
           <div class="col offset-xl-1">
@@ -363,10 +355,10 @@
               </div>
               <div class="footer-contant">
                 <ul class="contact-list">
-                  <li><i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store India
+                  <li><i class="fa fa-map-marker"></i>Stylio Demo Store, Demo store Globally
                     345-659</li>
                   <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
-                  <li><i class="fa fa-envelope"></i>Email Us: Support@Multikart.com</li>
+                  <li><i class="fa fa-envelope"></i>Email Us: Support@stylio.com</li>
                   <li><i class="fa fa-fax"></i>Fax: 123456</li>
                 </ul>
               </div>
