product creation page in progress

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -24,6 +24,25 @@
     </form>
   </div>
 </section> --}}
+ <div class="breadcrumb-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="page-title">
+                        <h2>customer's login</h2>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <nav aria-label="breadcrumb" class="theme-breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item active">Login</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <section class="login-page section-b-space">
   <form action="/auth/login" method="POST">
