create product in progress with added change

--- a/views/create-product.hbs
+++ b/views/create-product.hbs
@@ -26,79 +26,74 @@
           <div class="theme-card">
             <div class="form-group">
               <label for="text">Product Name</label>
-              <input type="text" name="Product Name" class="form-control" id="product-name"
-                placeholder="Enter product-name" required="">
+              <input type="text" name="productName" class="form-control" id="product-name"
+                placeholder="Enter product name" required="">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
             <label for="review">Product Category</label>
-            <input type="text" name="product-category" class="form-control" id="product"
-              placeholder="Enter Product-category" required="">
+            <input type="text" name="productCategory" class="form-control" id="product"
+              placeholder="Enter product category" required="">
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
             <label for="review">Product Price </label>
-            <input type="text" name="product-price" class="form-control" id="review"
-              placeholder="Enter Product Price(Per Quantity)" required="">
+            <input type="text" name="productPrice" class="form-control" id="review"
+              placeholder="Enter product price (per quantity)" required="">
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
-            <label for="review">Product Dimension * </label>
-            <input type="text" name="product-price" class="form-control" id="review"
-              placeholder="Enter Product doimension" required="">
+            <label for="review">Product Dimension</label>
+            <input type="text" name="productPrice" class="form-control" id="review"
+              placeholder="Enter product dimension" required="">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3">
-      <div class="form-group">
-        <label for="text">Quantity</label>
-        <input type="text" name="quantity" class="form-control" id="product" placeholder="Enter Product Quantity"
-          required="">
-      </div>
-      </div>
+          <div class="form-group">
+            <label for="text">Quantity</label>
+            <input type="text" name="quantity" class="form-control" id="product" placeholder="Enter product quantity"
+              required="">
+          </div>
+        </div>
         <div class="col-lg-3">
-      <div class="form-group">
-        <label for="review">Color</label>
-        <input type="text" name="color" class="form-control" id="product" placeholder="Enter Product color" required="">
-      </div>
-      </div>
-       
-       <div class="col-lg-3">
+          <div class="form-group">
+            <label for="review">Color</label>
+            <input type="text" name="color" class="form-control" id="product" placeholder="Enter product color"
+              required="">
+          </div>
+        </div>
 
-      <div class="form-group">
-        <label for="text">Product Brand</label>
-        <input type="text" name="Product brand" class="form-control" id="product" placeholder="Enter Product Material"
-          required="">
-      </div>
-      </div>
-       {{!-- <div class="col-lg-3"> --}}
-        <div class="col-lg-3 select_input">
-                                <label for="review">Product Image *</label>
-                                <select class="form-control" size="1">
-                                    <option value="decoration">Decoration</option>
-                                    <option value="bedding">Bedding</option>
-                                    <option value="pillow">Pillow</option>
-                                    <option value="Linen">Linen</option>
-                                </select>
-     
-      </div>
+        <div class="col-lg-3">
 
-       <div class="col-lg-3">
-        
-                                <label for="review">Product Description</label>
-                                <textarea class="form-control mb-0" placeholder="Enter Product Description"
-                                    id="exampleFormControlTextarea1" rows="6"></textarea>
-                            </div>
+          <div class="form-group">
+            <label for="text">Product Brand</label>
+            <input type="text" name="ProductBrand" class="form-control" id="product"
+              placeholder="Enter product material" required="">
+          </div>
+        </div>
+        {{!-- <div class="col-lg-3"> --}}
+          <div class="col-lg-3 select_input">
+            <label for="review">Product Image</label>
+            <input type="file" name="ProductBrand" class="form-control" id="product"
+              placeholder="Enter product material" required="">
+          </div>
 
-</div>
-    </div>
-      </form>
-    </div>
-    </div>
+          <div class="col-lg-12">
+            <label for="review">Product Description</label>
+            <textarea class="form-control mb-0" name="productDescription" placeholder="Enter Product Description" id="exampleFormControlTextarea1"
+              rows="6"></textarea>
+          </div>
+
+        </div>
+      </div>
+  </form>
+  </div>
+  </div>
   </form>
 </section>
