Profile icon and Product/ category post  done

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -33,7 +33,7 @@
                                         placeholder="Enter your password" required>
                                 </div>
                     
-                                <button type="submit"  class="btn btn-solid w-auto">CREATE AN ACCOUNT</button>
+                                <button type="submit"  style="margin-left: 0.7rem" class="btn btn-solid w-auto">CREATE AN ACCOUNT</button>
                                  
                             </div>
           {{#if errorMessage}}
