--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -56,22 +56,23 @@
           </div>
           <div class="col-lg-6 text-end">
             <ul class="header-dropdown">
-              <li class="mobile-wishlist"><a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
-              </li>
-              <li class="onhover-dropdown mobile-account"> <i class="fa fa-user" aria-hidden="true"></i>
-                My Account
-                <ul class="onhover-show-div">
-                    {{#if loggedIn}}
-                    <li><a href="/auth/profile">Profile</a></li>
-                    <li>
-                      <form action="auth/logout" method="post">
+              {{#if loggedIn}}
+              <li class="onhover-dropdown mobile-account"><i  class="fa fa-user" aria-hidden="true"></i>
+              Welcome {{firstName}}
+              <ul class="onhover-show-div">
+                <li><a href="/order/cart">Cart</a></li>
+               <li><form action="auth/logout" method="post">
                      <a href="/auth/logout">Logout</a>
                       </form>
                     </li>
-                  {{else}}
+              </ul>
+              {{else}}
+               <li class="onhover-dropdown mobile-account"> <i class="fa fa-user" aria-hidden="true"></i>
+                My Account
+                <ul class="onhover-show-div">
                     <li><a href="/auth/login">Login</a></li>
                     <li><a href="/auth/register">Register</a></li>
-                  {{/if }}
+                    {{/if}}
                 </ul>
               </li>
             </ul>
@@ -266,7 +267,6 @@
                                         5</a></li>
                                   </ul>
                                 </div>   
-                                
   </header>
 {{{body}}}
   <!-- footer start -->
@@ -308,13 +308,21 @@
               <h4>about</h4>
             </div>
             <div class="footer-contant">
-                <div class="brand-logo" style="float:left; margin-right: 0px;">
+                <div class="brand-logo" style="float:left; margin: 0px;">
                 <a href="/"><img src="/assets/images/logos/stylio.png" class="img-fluid blur-up lazyload"
                     alt=""></a>
               </div>
-              <p>Enjoy rewards and instant benefits by joining our STYLIO Family club for free today.</p>
-              <button class="theme-color-5 " style="margin-left:9rem; margin-top:2.5rem; border:transparent;  height: 3rem; width: 10rem; background-color: #d4b196;"><a style="color: white; font-size: 1rem; font-weight: 400; font-family: Lato,sans-serif;" href="/auth/register">JOIN NOW</a></button>
-              
+              <p style="word-break:break-all; padding-bottom: 1rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+              <div class="footer-social">
+                <ul>
+                  <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="col offset-xl-1">
@@ -356,10 +364,10 @@
               </div>
               <div class="footer-contant">
                 <ul class="contact-list">
-                  <li><i class="fa fa-map-marker"></i>Stylio Demo Store, Demo store Globally
+                  <li><i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store India
                     345-659</li>
                   <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
-                  <li><i class="fa fa-envelope"></i>Email Us: Support@stylio.com</li>
+                  <li><i class="fa fa-envelope"></i>Email Us: Support@Multikart.com</li>
                   <li><i class="fa fa-fax"></i>Fax: 123456</li>
                 </ul>
               </div>
