--- a/views/product/create-product.hbs
+++ b/views/product/create-product.hbs
@@ -19,35 +19,38 @@
 </div>
 
 <section class="product-page section-b-space">
-  <form action="/create" method="POST">
+  <form action="product/create" method="POST">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
           <div class="theme-card">
             <div class="form-group">
               <label for="text">Product Name</label>
-              <input type="text" name="productName" class="form-control" id="product-name"
+              <input type="text" name="name" class="form-control" id="product-name"
                 placeholder="Enter product name" required="">
             </div>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
-            <label for="review">Product Category</label>
-            <input type="text" name="productCategory" class="form-control" id="product"
-              placeholder="Enter product category" required="">
+            <label for="">Product Category</label>
+            <select name="product_category">
+              {{#each categoryDB}}
+            <option value="{{this._id}}">{{this.name}}</option>
+            {{/each}}
+            </select>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
             <label for="review">Product Price </label>
-            <input type="text" name="productPrice" class="form-control" id="review"
+            <input type="text" name="price" class="form-control" id="review"
               placeholder="Enter product price (per quantity)" required="">
           </div>
         </div>
         <div class="col-lg-3">
           <div class="form-group">
-            <label for="review">Product Dimension</label>
+            <label for="review">Dimension</label>
             <input type="text" name="productPrice" class="form-control" id="review"
               placeholder="Enter product dimension" required="">
           </div>
@@ -73,25 +76,51 @@
 
           <div class="form-group">
             <label for="text">Product Brand</label>
-            <input type="text" name="ProductBrand" class="form-control" id="product"
+            <input type="text" name="brand_name" class="form-control" id="product"
               placeholder="Enter product material" required="">
           </div>
         </div>
         {{!-- <div class="col-lg-3"> --}}
           <div class="col-lg-3 select_input">
             <label for="review">Product Image</label>
-            <input type="file" name="ProductBrand" class="form-control" id="product"
+            <input type="file" name="image_name" class="form-control" id="product"
               placeholder="Enter product material" required="">
           </div>
 
+         <div class="col-lg-3">
+          <div class="form-group">
+            <label for="review">Product Instruction </label>
+            <input type="text" name="care_instructions" class="form-control" id="review"
+              placeholder="Enter product dimension" required="">
+          </div>
+        </div>
+
+           <div class="col-lg-3">
+          <div class="form-group">
+            <label for="review">Discount</label>
+            <input type="text" name="discount" class="form-control" id="review"
+              placeholder="Enter product dimension" required="">
+          </div>
+        </div>
+      </div>
+
+         
+
           <div class="col-lg-12">
             <label for="review">Product Description</label>
-            <textarea class="form-control mb-0" name="productDescription" placeholder="Enter Product Description" id="exampleFormControlTextarea1"
+            <textarea class="form-control mb-0" name="description" placeholder="Enter Product Description" id="exampleFormControlTextarea1"
               rows="6"></textarea>
           </div>
 
         </div>
       </div>
+
+           </div>
+      <div style="display:flex; justify-content:space-evenly;margin-top: 2rem; ">
+<button type="submit"  class="btn btn-solid w-auto">Create</button>
+<button type="submit"  class="btn btn-solid w-auto">Reset</button>
+      </div>
+       
   </form>
   </div>
   </div>
