--- a/views/product/create.hbs
+++ b/views/product/create.hbs
@@ -19,7 +19,7 @@
 </div>
 
 <section class="product-page section-b-space">
-  <form action="product/create" method="POST">
+  <form action="/product/create" method="POST">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -31,28 +31,20 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+      
+          <div class="col-lg-3">
           <div class="form-group">
-            <label for="">Product Category</label>
-            <select name="product_category">
-              {{#each categoryDB}}
-            <option value="{{this._id}}">{{this.name}}</option>
-            {{/each}}
-            </select>
+            <label for="review">Material</label>
+            <input type="text" name="material" class="form-control" id="review"
+              placeholder="material" required="">
           </div>
         </div>
+
         <div class="col-lg-3">
           <div class="form-group">
-            <label for="review">Product Price </label>
+            <label for="review">Product Price</label>
             <input type="text" name="price" class="form-control" id="review"
-              placeholder="Enter product price (per quantity)" required="">
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="form-group">
-            <label for="review">Dimension</label>
-            <input type="text" name="productPrice" class="form-control" id="review"
-              placeholder="Enter product dimension" required="">
+              placeholder="Enter product price" required="">
           </div>
         </div>
       </div>
@@ -73,25 +65,25 @@
         </div>
 
         <div class="col-lg-3">
-
           <div class="form-group">
             <label for="text">Product Brand</label>
             <input type="text" name="brand_name" class="form-control" id="product"
-              placeholder="Enter product material" required="">
+              placeholder="Enter product Brand" required="">
           </div>
         </div>
+      
         {{!-- <div class="col-lg-3"> --}}
           <div class="col-lg-3 select_input">
             <label for="review">Product Image</label>
-            <input type="file" name="image_name" class="form-control" id="product"
-              placeholder="Enter product material" required="">
+            <input type="file" name="image" class="form-control" id="product"
+              placeholder="Enter product Image" required="">
           </div>
 
          <div class="col-lg-3">
           <div class="form-group">
             <label for="review">Product Instruction </label>
             <input type="text" name="care_instructions" class="form-control" id="review"
-              placeholder="Enter product dimension" required="">
+              placeholder="Enter product instruction" required="">
           </div>
         </div>
 
@@ -99,23 +91,34 @@
           <div class="form-group">
             <label for="review">Discount</label>
             <input type="text" name="discount" class="form-control" id="review"
-              placeholder="Enter product dimension" required="">
+              placeholder="Enter product discount price" required="">
           </div>
         </div>
       </div>
-
          
+      
+ <div class="col-lg-3">
+          <div class="form-group">
+            <label for="">Product Category</label>
+            <select name="product_category">
+              {{#each categoryDB}}
+            <option value="{{this._id}}">{{this.name}}</option>
+            {{/each}}
+            </select>
+          </div>
+        </div>
+
 
           <div class="col-lg-12">
             <label for="review">Product Description</label>
             <textarea class="form-control mb-0" name="description" placeholder="Enter Product Description" id="exampleFormControlTextarea1"
               rows="6"></textarea>
           </div>
-
         </div>
       </div>
+    </div>
 
-           </div>
+       
       <div style="display:flex; justify-content:space-evenly;margin-top: 2rem; ">
 <button type="submit"  class="btn btn-solid w-auto">Create</button>
 <button type="submit"  class="btn btn-solid w-auto">Reset</button>
